# prompt-cms

./: README.md  alembic.ini  env.example  main.py  pyproject.toml  requirements.txt  test_app.py
alembic/: env.py
alembic/versions/: 58153b757495_initial_migration_create_prompts_table.py
app/: __init__.py  admin.py  auth.py  database.py  main.py  models.py  public.py
app/static/css/: admin.css
app/static/js/: admin.js
app/templates/: 404.html  500.html  base.html  error.html
app/templates/admin/: dashboard.html  edit_prompt.html  login.html  prompt_form.html
