[project]
name = "prompt-cms"
version = "0.1.0"
description = "FastAPI-based Content Management System for Markdown Prompts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "starlette>=0.41.0",
    "python-dotenv>=1.0.0",
    "itsdangerous>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
